feat: Se agregan query params udistrital/argo_documentacion#133
